--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="see"></div>
-    </div>
-</body>
+  </head>
+  <body>
+    <section>
+      <div class="mail">
+        <div class="container">
+          <div class="mail-main">
+            <div class="mail-counts">
+              <div class="letters-number"></div>
+              <div class="unread"></div>
+            </div>
+            <div class="letters-main">
+                <div class="letter-section">
+                    <div class="sender-info">
+                        <div class="senders-photo"></div>
+                        <div class="sender-name"></div>
+                        <div class="sender-number"></div>
+                    </div>
+                    <div class="message-info"></div>
+                    <div class="date-time">
+                        <div class="time"></div>
+                        <div class="date"></div>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="./js/app.js"></script>
+    <script src="./js/messages.js"></script>
+    <script></script>
+  </body>
 </html>
