--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <section>
@@ -11,20 +12,22 @@
         <div class="container">
           <div class="mail-main">
             <div class="mail-counts">
-              <div class="letters-number"></div>
-              <div class="unread"></div>
+              <div class="letters-number">Повідомлень: </div>
+              <div class="unread">Непрочитано: </div>
             </div>
             <div class="letters-main">
                 <div class="letter-section">
                     <div class="sender-info">
-                        <div class="senders-photo"></div>
-                        <div class="sender-name"></div>
-                        <div class="sender-number"></div>
+                        <div class="senders-photo"><img src="./img/Screenshot_1.png" alt=""></div>
+                        <div>
+                            <div class="sender-name">Александра Александрова</div>
+                            <div class="sender-number">095 555 55 55</div>
+                        </div>
                     </div>
-                    <div class="message-info"></div>
+                    <div class="message-info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos laboriosam animi repudiandae ducimus.</div>
                     <div class="date-time">
-                        <div class="time"></div>
-                        <div class="date"></div>
+                        <div class="time">11:50</div>
+                        <div class="date">01.12.2020</div>
                     </div>
                 </div>
             </div>
