--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <div class="letters-number">Повідомлень: </div>
               <div class="unread">Непрочитано: </div>
             </div>
-            <div class="letters-main">
+            <div class="letters-main" id="list">
                 <div class="letter-section">
                     <div class="sender-info">
                         <div class="senders-photo"><img src="./img/Screenshot_1.png" alt=""></div>
