--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="container">
           <div class="mail-main">
             <div class="mail-counts">
-              <div class="letters-number">Повідомлень: </div>
-              <div class="unread">Непрочитано: </div>
+              <button id="refreshBtn">&#128472;</button>
+              <div class="letters-number">Повідомлень: <span id="allCount"></span></div>
+              <div class="unread">Непрочитано: <span id="unreadCount"></span></div>
             </div>
             <div class="list" id="list"></div>
           </div>
