button show more

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    
     <section>
       <div class="mail">
         <div class="container">
@@ -15,6 +16,10 @@
               <button id="refreshBtn">&#128472;</button>
               <div class="letters-number">Повідомлень: <span id="allCount"></span></div>
               <div class="unread">Непрочитано: <span id="unreadCount"></span></div>
+              <form class="search-form" id="search-form">
+                <input type="search" name="search">
+                <button type="submit">Find</button>
+              </form>
             </div>
             <div class="list" id="list"></div>
           </div>
