--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <button id="refreshBtn">&#128472;</button>
               <div class="letters-number">Повідомлень: <span id="allCount"></span></div>
               <div class="unread">Непрочитано: <span id="unreadCount"></span></div>
-              <form class="search-form" id="search-form">
+              <form class="search-form" id="searchForm">
                 <input type="search" name="search">
                 <button type="submit">Find</button>
               </form>
