--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    
     <section>
       <div class="mail">
         <div class="container">
@@ -26,8 +25,7 @@
         </div>
       </div>
     </section>
-    <script src="./js/messages.js"></script>
+    <script src="./js/messages.json"></script>
     <script src="./js/app.js"></script>
-    <script></script>
   </body>
 </html>
